chore: add fmt task

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "build": "ncc build src/index.ts --license LICENSE"
+    "build": "ncc build src/index.ts --license LICENSE",
+    "fmt": "prettier --write ."
   },
   "dependencies": {
     "@actions/core": "1.11.1",
@@ -11,6 +12,7 @@
   "devDependencies": {
     "@types/node": "20.17.10",
     "@vercel/ncc": "0.38.3",
+    "prettier": "3.4.2",
     "typescript": "5.7.2"
   }
 }
