fix: fix js file path

--- a/.github/workflows/watch-follower.yaml
+++ b/.github/workflows/watch-follower.yaml
@@ -12,6 +12,6 @@ jobs:
       issues: write
       packages: write
     steps:
-      - uses: suzuki-shunsuke/monitor-gh-follower-action@322f4b4fca1d7cdcfec623bc3ae8c08393d00f49 # v0.1.0-5
+      - uses: suzuki-shunsuke/monitor-gh-follower-action@pr/22
         with:
           issue_number: 1
