--- a/.github/workflows/watch-follower.yaml
+++ b/.github/workflows/watch-follower.yaml
@@ -15,3 +15,8 @@ jobs:
       - uses: suzuki-shunsuke/monitor-gh-follower-action@latest
         with:
           issue_number: 1
+      - uses: suzuki-shunsuke/notify-workflow-error-action@e5e8817e62eb122231d162dbc8309c4d05a21b2e # v0.1.0
+        if: always()
+        with:
+          issue_number: "33"
+          status: ${{ job.status }}
