--- a/.github/workflows/wc-format.yaml
+++ b/.github/workflows/wc-format.yaml
@@ -27,7 +27,7 @@ jobs:
         if: |
           github.event_name != 'pull_request' || !github.event.pull_request.head.repo.fork
         with:
-          aqua_version: v2.42.0
+          aqua_version: v2.42.1-0
         env:
           GITHUB_TOKEN: ${{github.token}}
 
