ci: configure concurrency

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -1,5 +1,8 @@
 name: pull request
 on: pull_request
+concurrency:
+  group: ${{github.workflow}}-${{github.ref}}
+  cancel-in-progress: true
 jobs:
   path-filter:
     # Get changed files to filter jobs
